hphp/hack/test/typecheck/case_sensitive_inheritance6.php.exp
File "case_sensitive_inheritance6.php", line 7, characters 19-21:
IFooChild inherits a method named `foo` whose name differs from this one (`Foo`) only by case. (Typing[4393])
  File "case_sensitive_inheritance6.php", line 3, characters 19-21:
  It was inherited from IFoo as `~~f~~oo`. If you meant to override it, please use the same casing as the inherited method. Otherwise, please choose a different name for the new method
